[package]
name = "hayahoo"
version = "0.1.3"
edition = "2021"
description = "A native Yahoo Finance plugin for Hayashi"
license = "MIT"
repository = "https://github.com/sheep-farm/hayahoo"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
ureq = { version = "2.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"
panic = "abort"
